--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,5 +1,6 @@
 .header {
     display: flex;
+    flex: 1;
     align-items: center;
     justify-content: space-between;
     position: sticky;
@@ -29,8 +30,8 @@
 }
 
 .header_icon_spacing {
-    margin-left: 10px;
-    width: 50px;
+    margin-left: 20px;
+   
     color: gray;
 }
 
@@ -41,17 +42,21 @@
     border: 1px solid;
     width: 40%;
 }
-
+.header_center>input:focus {
+    
+    outline:0 !important
+}
 
 
 .header_center>input {
     flex: 1;
     border: none;
+    outline:0 !important
 }
 
 .avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 25px !important;
-    border: 1px solid;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px !important;
+    border: 1px light;
 }
